--- a/prefect.yaml
+++ b/prefect.yaml
@@ -62,6 +62,7 @@ deployments:
     timezone: EST
     day_or: true
     active: true
+    slug: weekly-meal-planner-sat-5pm
 
 - name: slack-polling
   version: null
